--- a/OnlineShop/Client/Pages/Index.razor
+++ b/OnlineShop/Client/Pages/Index.razor
@@ -1,7 +1,14 @@
 ﻿@page "/"
+@inject NavigationManager navMeneger;
 
-<h1>Hello, world!</h1>
+<div>
+    Bla bla
+</div>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+@code{ 
+    protected override Task OnInitializedAsync()
+    {
+        navMeneger.NavigateTo("/authorization");
+        return Task.CompletedTask;
+    }
+}
