Add swagger + Add authorization page with login and registration + Add User and UserRepository classes
- Now Swagger working on page with url http://localhost:23064/swagger/index.html
- User class has fields: login, password, identifier and registration time.
- IUserRepository class perform operations on processing requests from the user in terms of authorization (check the existence of the user in the system, register the user, etc.)
- Added AuthController which should send and receive requests by POST and PUT (needs fixes)

At the moment, instead of a database, RAM is used to check the operability of the authorization system (the authorization system does not work)

--- a/OnlineShop/Client/Pages/Auth/Login.razor
+++ b/OnlineShop/Client/Pages/Auth/Login.razor
@@ -1,6 +1,7 @@
 ﻿@page "/authorization/login"
 
 @using OnlineShop.Shared
+@inject HttpClient client
 
 <h3>Login</h3>
 <div>
@@ -29,8 +30,11 @@
     }
 
 
-    private void OnLogin()
+    private async Task OnLogin()
     {
-        labelValue = credentials.ToString();
+        var request = new HttpRequestMessage(HttpMethod.Put, "/auth");
+        request.Content = JsonContent.Create<UserCredentials>(credentials);
+        var user = await client.SendAsync(request);
+        Console.WriteLine(user);
     }
 }
