added registration and login with adding and getting information from db

--- a/OnlineShop/Client/Pages/Auth/Login.razor
+++ b/OnlineShop/Client/Pages/Auth/Login.razor
@@ -6,7 +6,7 @@
 <h3>Login</h3>
 <div>
     <EditForm Model="@credentials" class="form-group">
-        <InputText @bind-Value="@credentials.Login" class="form-row" />
+        <InputText @bind-Value="@credentials.UserName" class="form-row" />
 
         <InputText @bind-Value="@credentials.Password" class="form-row" />
 
