--- a/OnlineShop/Client/Pages/Auth/Register.razor
+++ b/OnlineShop/Client/Pages/Auth/Register.razor
@@ -7,7 +7,7 @@
 <div>
     <EditForm Model="credentials" class="form-group">
 
-        <InputText @bind-Value="@credentials.Login" class="form-row" />
+        <InputText @bind-Value="@credentials.UserName" class="form-row" />
         <InputText @bind-Value="@credentials.Password" class="form-row" />
         <InputText @bind-Value="@passwordRepeated" class="form-row" />
 
