--- a/OnlineShop/Client/App.razor
+++ b/OnlineShop/Client/App.razor
@@ -1,3 +1,6 @@
+@using MudBlazor;
+<MudThemeProvider/>
+<MudDialogProvider/>
 <Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
     <Found Context="routeData">
         <RouteView RouteData="@routeData"/>
