--- a/OnlineShop/Client/App.razor
+++ b/OnlineShop/Client/App.razor
@@ -1,6 +1,7 @@
 @using MudBlazor;
 <MudThemeProvider/>
 <MudDialogProvider/>
+<MudSnackbarProvider/>
 <Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
     <Found Context="routeData">
         <RouteView RouteData="@routeData"/>
