--- a/OnlineShop/Client/Pages/Auth/Register.razor
+++ b/OnlineShop/Client/Pages/Auth/Register.razor
@@ -1,25 +1,27 @@
 ﻿@page "/authorization/register"
-
+@using MudBlazor
 @using OnlineShop.Shared
 @inject HttpClient client
 
 <h3>Register</h3>
 <div>
-    <EditForm Model="credentials" class="form-group">
+    <MudPaper>
 
-        <InputText @bind-Value="@credentials.UserName" class="form-row" />
-        <InputText @bind-Value="@credentials.Password" class="form-row" />
-        <InputText @bind-Value="@passwordRepeated" class="form-row" />
+        <EditForm Model="credentials" class="form-group">
 
-        <button @onclick="OnRegister">Register</button>
-    </EditForm>
+            <InputText @bind-Value="@credentials.UserName" class="form-row"/>
+            <InputText @bind-Value="@credentials.Password" class="form-row"/>
+            <InputText @bind-Value="@passwordRepeated" class="form-row"/>
 
-    @if (errString != null)
-    {
-        <label>@errString</label>
-    }
+            <button @onclick="OnRegister">Register</button>
+        </EditForm>
+        @if (errString != null)
+        {
+            <MudAlert Severity="Severity.Error">"WADAS"</MudAlert>
+        }
 
-    <a href="/authorization/login">To login </a>
+        <a href="/authorization/login">To login </a>
+    </MudPaper>
 </div>
 
 
@@ -41,9 +43,19 @@
         }
         else
         {
-            var response = await client.PostAsJsonAsync<UserCredentials>("api/Auth", credentials);
-            User user = await response.Content.ReadFromJsonAsync<User>();
-            Console.WriteLine(user);
+            try
+            {
+                var response = await client.PostAsJsonAsync<UserCredentials>("api/Auth", credentials);
+                User user = await response.Content.ReadFromJsonAsync<User>();
+                Console.WriteLine(user);
+            }
+            catch (Exception e)
+            {
+                errString = e.Message;
+                Console.WriteLine(e);
+                throw;
+            }
         }
     }
+
 }
