--- a/OnlineShop/Client/Pages/Index.razor
+++ b/OnlineShop/Client/Pages/Index.razor
@@ -8,7 +8,7 @@
 @code{ 
     protected override Task OnInitializedAsync()
     {
-        navManager.NavigateTo("/authorization");
+        navManager.NavigateTo("/main");
         return Task.CompletedTask;
     }
 }
