+ login dialog + logic with user cookies and goods_operations

--- a/OnlineShop/Client/Pages/Editor/Cropper.razor
+++ b/OnlineShop/Client/Pages/Editor/Cropper.razor
@@ -30,7 +30,7 @@
                     width: @width |
                     height: @height
                 </div>
-                <MudChipSet Filter="filter" SelectedChipChanged="SelectProportion" @bind-SelectedValues="selectedValues">
+                <MudChipSet Filter="filter" SelectedChipChanged="SelectProportion">
                     <MudChip Text="32x32" Value="1"></MudChip>
                     <MudChip Text="32x64" Value="2"></MudChip>
                     <MudChip Text="32x48" Value="1.5"></MudChip>
