--- a/OnlineShop/Client/App.razor
+++ b/OnlineShop/Client/App.razor
@@ -1,4 +1,3 @@
-@using MudBlazor;
 <MudThemeProvider/>
 <MudDialogProvider/>
 <MudSnackbarProvider/>
@@ -7,8 +6,6 @@
         <RouteView RouteData="@routeData"/>
     </Found>
     <NotFound>
-        @*<LayoutView Layout="@typeof(MainLayout)">*@
-            <p>Sorry, there's nothing at this address.</p>
-        @*</LayoutView>*@
+        <NotFoundPage></NotFoundPage>
     </NotFound>
 </Router>
